<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/widgetLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green01"
        android:orientation="horizontal"
        android:paddingEnd="5dp"
        android:paddingStart="5dp">

        <ImageView
            android:id="@+id/widgetImgLauncher"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/widgetImgLauncher"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:id="@+id/widgetTopBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/score"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#4B4B4D"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txvWidgetTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txvWidgetTitle"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#4B4B4D" />
        </LinearLayout>
    </LinearLayout>
    <ListView
            android:id="@+id/widgetCollectionList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            tools:listitem="@layout/widget_detail_list_item" />

        <TextView
            android:id="@+id/widget_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/empty"
            android:gravity="center"
            android:text="@string/empty"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/blue06" />
</LinearLayout>